--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,5 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3'
     implementation 'io.ktor:ktor-client-cio:1.2.6'
     implementation 'io.ktor:ktor-client-gson:1.2.6'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation project(':lib')
 }
