--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name="ru.netology.activity.RegistrationActivity" />
+        <activity android:name="ru.netology.activity.FeedActivity" />
         <activity android:name="ru.netology.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
