--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -1,22 +1,12 @@
-apply plugin: 'com.android.library'
-
-apply plugin: 'kotlin-android'
-
-android {
-    compileSdkVersion 29
-    defaultConfig {
-        minSdkVersion 26
-        targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
-    }
-    testOptions {
-        unitTests.returnDefaultValues = true
-    }
-}
+apply plugin: 'java-library'
+apply plugin: 'kotlin'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation 'io.ktor:ktor-client-gson:1.2.6'
+}
+
+compileKotlin {
+    kotlinOptions.jvmTarget = "1.8"
 }
